correct invisibility of chat area

--- a/src/Pages/Users.Login/Logined/Game/PlayGame.css
+++ b/src/Pages/Users.Login/Logined/Game/PlayGame.css
@@ -146,7 +146,7 @@
 }
 
 .sent-chats{
-    max-height:72vh;
+    height:68vh;
 }
 .chat {
     background-color: var(--main-bg-color);
